--- a/css/stylessheet.css
+++ b/css/stylessheet.css
@@ -123,7 +123,7 @@ body{
     width: calc(100% - 260px);
     left: 240px;
     min-height: calc(100vh - 60px);
-    background: #f5f5f5;
+    background: #dedbdb;
 }
 .cards{
     width: 100%;
@@ -219,3 +219,4 @@ body{
     min-height: calc(100vh - 60px);
     background: #f5f5f5;
 }
+
