--- a/css/stylessheet.css
+++ b/css/stylessheet.css
@@ -64,15 +64,16 @@ body{
 
 .user{
     position: absolute;
-    left: 1200px;
+   margin-right: 200px;
+   margin-left: 1190px;
     width: 50px;
     height: 50px;
     
 }
 .user img{
-    position: absolute;
+    
     top: 0;
-    left: 1200;
+    
     height: 100%;
     width: 100%;
     object-fit: cover;
